themes/mukurtu_v4/css/style.css
/* ... */
h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a,
.h1 a,
.h2 a,
.h3 a,
.h4 a,
.h5 a,
.h6 a {
  color: var(--brand-primary);
}

h1,
.h1,
h2,
.h2,
h3,
.h3 {
  margin-block: var(--v-space-4xs) var(--v-space-4xs)/2;
}

h4,
.h4,
h5,
.h5,
h6,
.h6 {
  margin-block: var(--v-space-4xs)/2;
}

h1,
.h1 {
  font-size: var(--font-size-heading-lg);
}

h2,
.h2 {
  font-size: var(--font-size-heading-md);
}

h3,
.h3 {
  font-size: var(--font-size-3xl);
}

h4,
.h4 {
  font-size: var(--font-size-2xl);
}

h5,
.h5 {
  font-size: var(--font-size-xl);
}

h6,
.h6 {
  font-size: var(--font-size-l);
}

button,
input[type=button],
input[type=submit],
input[type=reset],
.button {
  color: var(--light-text-color);
  background: var(--brand-primary-dark);
  font-size: var(--font-size-base);
  font-weight: var(--text-bold);
  letter-spacing: var(--letter-spacing-label);
  border: none;
  padding-block: var(--v-space-5xs);
  padding-inline: var(--v-space-2xs);
  cursor: pointer;
}
button:hover, button:active, button:focus,
input[type=button]:hover,
input[type=button]:active,
input[type=button]:focus,
input[type=submit]:hover,
input[type=submit]:active,
input[type=submit]:focus,
input[type=reset]:hover,
input[type=reset]:active,
input[type=reset]:focus,
.button:hover,
.button:active,
.button:focus {
  color: var(--light-text-color);
  background: var(--brand-primary-accent);
}
button:focus,
input[type=button]:focus,
input[type=submit]:focus,
input[type=reset]:focus,
.button:focus {
  outline: 2px solid var(--focus-color);
}
button:disabled,
input[type=button]:disabled,
input[type=submit]:disabled,
input[type=reset]:disabled,
.button:disabled {
  color: var(--light-text-color);
  background: var(--brand-text-color);
}

.field__label {
  color: var(--brand-text-color);
  font-weight: var(--text-bold);
  font-size: var(--font-size-s);
}
@media (min-width: 60rem) {
  .field__label {
    font-size: var(--font-size-m);
  }
}

figure,
figure.align-center {
  display: table;
  inline-size: -webkit-fit-content;
  inline-size: -moz-fit-content;
  inline-size: fit-content;
  margin: 0;
  padding: 0;
}
figure figcaption,
figure.align-center figcaption {
  display: table-caption;
  caption-side: bottom;
  -webkit-margin-before: var(--v-space-5xs);
          margin-block-start: var(--v-space-5xs);
  font-style: italic;
  line-height: var(--line-height-xs);
}

figure.align-center,
.media.align-center {
  margin-block: var(--v-space-3xs);
  margin-inline: auto;
}

figure.align-left,
.media.align-left {
  margin-block: var(--v-space-4xxs) var(--v-space-4xxs);
  margin-inline: 0 var(--v-space-3xs);
}

figure.align-right,
.media.align-right {
  margin-block: var(--v-space-4xxs) var(--v-space-4xxs);
  margin-inline: var(--v-space-3xs) 0;
}

.page__logo a {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.horizontal-tabs ul.horizontal-tabs-list a:focus {
  outline: 4px solid var(--focus-color);
}
.horizontal-tabs ul.horizontal-tabs-list li:not(.selected) a:active, .horizontal-tabs ul.horizontal-tabs-list li:not(.selected) a:focus {
  background-color: var(--color-white);
}

svg.ext,
svg.mailto,
svg.tel {
  inline-size: 1.25rem;
  block-size: 1rem;
  fill: var(--brand-primary-dark);
}

a:not(.primary-nav__menu-link) svg.ext path,
a:not(.primary-nav__menu-link) svg.mailto path,
a:not(.primary-nav__menu-link) svg.tel path {
  stroke: var(--brand-primary-dark);
}

.mukurtu-footer a svg.ext path,
.mukurtu-footer a svg.mailto path,
.mukurtu-footer a svg.tel path {
  stroke: var(--footer-text-color);
}

.js-form-type-select,
.select-wrapper {
  position: relative;
}
.js-form-type-select::after,
.select-wrapper::after {
  content: "";
  display: inline-block;
  position: absolute;
  inset-inline-end: 15px;
  margin: auto;
  inset-block-start: 50%;
  -webkit-transform: translateY(-50%);
          transform: translateY(-50%);
  inline-size: 0;
  block-size: 0;
  border-style: solid;
  border-width: var(--v-space-5xs) var(--v-space-5xs) 0 var(--v-space-5xs);
  border-color: var(--brand-primary-accent) transparent transparent transparent;
}
.js-form-type-select select,
.js-form-type-select .form-select,
.select-wrapper select,
.select-wrapper .form-select {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  border: none;
  background: var(--brand-light-accent);
  padding-block: var(--v-space-4xxs) var(--v-space-4xxs);
  padding-inline: var(--v-space-5xs) var(--v-space-2xs);
  -webkit-margin-start: var(--v-space-6xs);
          margin-inline-start: var(--v-space-6xs);
  inline-size: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: var(--text-bold);
}

.js-form-type-email input,
.js-form-type-textfield input,
.js-form-type-password input {
  -webkit-appearance: none;
     -moz-appearance: none;
          appearance: none;
  border: none;
  background: var(--brand-light-accent);
  padding-block: var(--v-space-4xxs) var(--v-space-4xxs);
  padding-inline: var(--v-space-5xs) var(--v-space-2xs);
  inline-size: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: var(--text-bold);
}

.community__sidebar > .field,
.protocol__sidebar > .field,
.callout {
  padding-inline: 1rem;
  padding-block: 1rem;
  background-color: var(--brand-light-accent);
  -webkit-border-before: 5px solid var(--brand-secondary);
          border-block-start: 5px solid var(--brand-secondary);
}

.splide__arrow--prev {
  inset-inline-start: -2em;
}
.splide__arrow--next {
  inset-inline-end: -2em;
}
.splide__slide {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.splide .splide__track--nav > .splide__list > .splide__slide.is-active {
  border: 3px solid var(--brand-primary);
}
/* ... */

